--- a/lang/ru.json
+++ b/lang/ru.json
@@ -17,6 +17,10 @@
     },
 	{
 		"t":"Контакты",
-		"href": "#/about"
-	}
+		"href": "#/contact"
+	},
+    {
+        "t":"На печать",
+        "href": "#/print"
+    }
 ]
