--- a/lang/skill.json
+++ b/lang/skill.json
@@ -18,6 +18,10 @@
         "start": "2014.10.01"
     },
     {
+        "text": "AngularJS E2E Testing Using Protractor",
+        "start": "2014.11.01"
+    },
+    {
         "text": "Lodash",
         "start": "2013.12.01"
     },
