--- a/lang/skill.json
+++ b/lang/skill.json
@@ -43,6 +43,10 @@
         "start": "2014.11.01"
     },
     {
+        "text": "Grunt js JavaScript task runner",
+        "start": "2014.01.01"
+    },
+    {
         "text": " SVN Revision control",
         "start": "2013.05.01",
         "end": "2014.05.01"
