--- a/lang/ppd.en.json
+++ b/lang/ppd.en.json
@@ -1,4 +1,5 @@
 {
     "release": "Release:",
-    "releaseDate": "2014.12.13 14:52:08"
+    "releaseDate": "2014.12.13 14:52:08",
+    "TO_PRESENT_TIME": "to present time"
 }
