--- a/lang/ppd.ru.json
+++ b/lang/ppd.ru.json
@@ -1,4 +1,5 @@
 {
     "release": "Релиз:",
-    "releaseDate": "2014.12.13 14:52:08"
+    "releaseDate": "2014.12.13 14:52:08",
+    "TO_PRESENT_TIME": "по настоящее время"
 }
