--- a/lang/skill.json
+++ b/lang/skill.json
@@ -1,5 +1,15 @@
 [
     {
+      "text": " Android",
+      "start": "2015.03.01"
+
+    },
+    {
+      "text": " Phonegap (for Android)",
+      "start": "2015.01.01",
+      "end": "2015.04.01"
+    },
+    {
         "text": " jQuery (jQuery-ui etc.)",
         "start": "2012.01.01"
     },
