--- a/lang/skill.json
+++ b/lang/skill.json
@@ -1,5 +1,10 @@
 [
     {
+        "text": " Vue",
+        "start": "2017.01.015"
+
+    },
+    {
         "text": " Angular 2 (typescript)",
         "start": "2016.08.01"
 
